	- cygwin support
	- clone simplified to support ipc reference counting
	- indentation fixes in the pod parts
	- prepend sbase to the arguments if not accessible (test first)
	- reverted test.pl to 0.47
	- support for incremental label families: apply fixed, move floating
	- uncommented a change by Uwe Nagler, to import empty directories
	- chomp control, especially in fork mode
	- fix for args relative to current dir (bug report by Achim Bursian)
	- do not remove empty directories
	- reuse also attempts to reuse 'implicit dirs'
	- snapview check the path to the vob root, in case dbase didn't exist
	- process whole paths brought in while reusing directory elements
	- file/symlink clashes handled
	- clone preserves the value of autofail

0.55 Thu Dec  9 14:37:57 GMTST 2010
        - fix to autofail cloning, especially in _lsprivate

0.56 Thu Dec 23 22:51:40 GMTST 2010
        - removed spurious cleartool errors, mostly under Windows/Cygwin
	- fixed various internal bugs: readcclink was altering its call context
	- absdst doesn't use Cwd::abs_path: behaves differently on UNIX and Cygwin
	- use of ClearCase::Argv::clone disturbs the ipc reference count
	- fixed bug in reusemkdir, which resulted in wrong removals
	- skip attempting to remove entries below removed dirs, or the same twice
	- checkin in reverse sort order, to cope with 'not selected by view'
	- removed from subtract list any symlink already renamed
	- restored less verbosity: no mklabel events
	- NOTE: all work from 0.48 to here courtesy of Marc Girod.

0.57 Mon Feb 14 18:38:24 GMTST 2011
        - apply even equivalent fixed labels with -rep, to allow for replay
	- if label existed, check labeled versions first
	- skip unchanged labeled versions from recursive labeling
	- symlinks in srcbase on Windows/Cygwin, if srcbase in a vob
	- import and remove dangling links
	- skip symlink to directory in file reuse
	- check in from source: do not attempt to check in again